Enhance footer with return link and instructions
Updated footer to include additional information and links.

--- a/index.html
+++ b/index.html
@@ -431,9 +431,24 @@
 </div>
 
 <footer>
-  © 2025 Content‑Aware Fill & Artist Reflection Exercise | Encouraging visual experimentation and reflective practice.
+  <p>
+    © 2025 Content‑Aware Fill & Artist Reflection Exercise  
+    | Encouraging visual experimentation and reflective practice.
+  </p>
+  <p style="margin-top:0.8rem; text-align:center;">
+  🔗 
+  <a href="https://moodle.arts.ac.uk/mod/page/view.php?id=1510167&forceview=1" 
+     target="_blank" 
+     style="color:#0a8080; font-weight:bold; text-decoration:none;">
+    Return to the Moodle Lesson Page
+  </a>
+  <br>
+  <span style="font-size:0.9rem; color:#555;">
+    Once there, scroll to the bottom and click on the <strong>Padlet Wall</strong>
+    to upload your completed work for review and feedback in jpg format.
+  </span>
+</p>
 </footer>
-</div>
 
 <script>
 // Quiz Functionality
